Atualizando layout da aplicação

--- a/eventos/src/main/resources/templates/home.html
+++ b/eventos/src/main/resources/templates/home.html
@@ -11,10 +11,10 @@
 
 	<div th:replase="~{menu :: menu}"></div>
 
-
+	<div class="container">
 	<h1>Bem vindo a nossa aplicação</h1>
 	<h2>Graça a Deus deu certo</h2>
-	<h2>Fernanda</h2>
+	</div>
 
 </body>
 </html>
