--- a/eventos/src/main/resources/templates/eventos/formEvento.html
+++ b/eventos/src/main/resources/templates/eventos/formEvento.html
@@ -10,6 +10,8 @@
 <body>
 
  <div th:replase="~{menu :: menu}"></div>
+ 
+ <div class="container">
 
 	<h1>Adicionar Evento</h1>
 
@@ -32,11 +34,11 @@
 		</div>
 
 		<div>
-			<button type="submit">Salvar</button>
-			<button type="reset">Limpar</button>
+			<button class="waves-effect waves-light btn" type="submit">Salvar</button>
+			<button class="waves-effect waves-light btn" type="reset">Limpar</button>
 		</div>
 
 	</form>
-
+</div>
 </body>
 </html>
