--- a/eventos/src/main/resources/templates/eventos/detalhes.html
+++ b/eventos/src/main/resources/templates/eventos/detalhes.html
@@ -5,6 +5,7 @@
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <title>Eventos</title>
 </head>
 <body>
@@ -46,13 +47,15 @@
 				<div class="card">
 					<div class="card-content">
 						<span class="card-title">Adicionar Convidado</span>
-						<form action="" method="post">
-							'
+						<form th:action="@{/eventos/{idEvento}{idEvento=${evento.id}}}" method="post">
 							<div>
-								<label>Nome: </label> <input type="text" name="nome">
+								<input type="hidden" name="id" th:value="${convidado.id}" readonly="readonly">
 							</div>
 							<div>
-								<label>RG: </label> <input type="text" name="rg">
+								<label>Nome: </label> <input type="text" name="nome" th:value="${convidado.nome}">
+							</div>
+							<div>
+								<label>RG: </label> <input type="text" name="rg" th:value="${convidado.rg}">
 							</div>
 							<div>
 								<button type="submit" class="btn">Salvar</button>
@@ -80,6 +83,10 @@
 							<th th:text="${c.id}">1</th>
 							<th th:text="${c.nome}">Humberto C.</th>
 							<th th:text="${c.rg}">123</th>
+							<td>
+							<a th:href="@{/eventos/{idEvento}/convidados/{idConvidado}/selecionar{idEvento=${evento.id}, idConvidado=${c.id}}}"><i class="material-icons">edit</i></a>
+							<a th:href="@{/eventos/{idEvento}/convidados{idConvidado}/remover{idEvento=${evento.id}, idConvidado=${c.id}}}"><i class="material-icons">delete</i></a>
+							</td>
 						</tr>
 					</tbody>
 				</table>
